<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.core.CoreActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.09"
        android:scaleType="centerCrop"
        android:src="@drawable/backdrop" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_bar_blur_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/howdy_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:text="@string/howdy"
                android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                android:textColor="?colorOnSurface"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/material_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/spacer"
                android:layout_marginBottom="@dimen/spacer"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/howdy_text_view">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/il_gen_z" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:text="@string/welcome_to_quot_social_media_integration_quot_app"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_card_view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_material_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacer"
                android:layout_marginTop="@dimen/spacer"
                android:layout_marginRight="@dimen/spacer"
                android:backgroundTint="?colorOnSurface"
                android:maxWidth="320dp"
                android:text="@string/continue_with_google"
                app:icon="@drawable/lg_google"
                app:iconTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/facebook_material_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebook_material_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacer"
                android:layout_marginTop="@dimen/spacer_half"
                android:layout_marginRight="@dimen/spacer"
                android:layout_marginBottom="@dimen/spacer"
                android:backgroundTint="?colorOnSurface"
                android:maxWidth="320dp"
                android:text="@string/continue_with_facebook"
                app:icon="@drawable/lg_facebook"
                app:iconTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_material_button"
                app:layout_constraintWidth_percent="0.6" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/status_bar_blur_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/navigation_bar_blur_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>