<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.core.CoreActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_bar_blur_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/your_profile_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:text="@string/your_profile"
                android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                android:textColor="?colorOnSurface"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/spacer"
                android:layout_marginBottom="@dimen/spacer"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintDimensionRatio="4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/your_profile_text_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <VideoView
                        android:id="@+id/video_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profile_shapeable_image_view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/spacer"
                        android:background="@color/card_background"
                        app:layout_constraintBottom_toBottomOf="@+id/video_view"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/circularImageView" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/name_title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:drawablePadding="@dimen/spacer_quarter"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="@color/material_on_surface_emphasis_medium"
                app:drawableEndCompat="@drawable/ic_star_24"
                app:drawableTint="@color/material_on_surface_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacer"
                android:layout_marginTop="@dimen/spacer_half"
                android:layout_marginRight="@dimen/spacer"
                android:text="@string/undefined"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_title_text_view"
                tools:text="Your Name" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                style="@style/Widget.Material3.MaterialDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacer"
                android:layout_marginTop="@dimen/spacer_half"
                android:layout_marginEnd="@dimen/spacer"
                android:alpha="@dimen/material_emphasis_disabled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

            <TextView
                android:id="@+id/email_title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacer"
                android:layout_marginTop="@dimen/spacer_half"
                android:layout_marginEnd="@dimen/spacer"
                android:drawablePadding="@dimen/spacer_quarter"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="@color/material_on_surface_emphasis_medium"
                app:drawableEndCompat="@drawable/ic_mail_24"
                app:drawableTint="@color/material_on_surface_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacer"
                android:layout_marginTop="@dimen/spacer_half"
                android:layout_marginRight="@dimen/spacer"
                android:text="@string/undefined"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_title_text_view"
                tools:text="Your Email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_out_material_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:text="@string/sign_out"
                app:icon="@drawable/ic_log_out_24"
                app:iconGravity="textTop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_view"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintWidth_percent="0.6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_material_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacer"
                android:layout_marginEnd="@dimen/spacer"
                android:text="@string/Close"
                android:theme="@style/ThemeOverlay.Material3.Button.TextButton"
                app:layout_constraintBottom_toBottomOf="@+id/your_profile_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/your_profile_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/your_profile_text_view"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/status_bar_blur_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/navigation_bar_blur_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>